[package]
name = "qbtt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Quinn's Basic TOML Tests for Rust is a very simple way to run and check tests right from the command line, with support for checksum, line_count, and string-contains checks"
readme = "README.md"
repository = "https://github.com/QpxDesign/qbtt-rs"

[dependencies]
async-process = "2.1.0"
colored = "2.1.0"
colorize = "0.1.0"
md5 = "0.7.0"
serde = "1.0.196"
serde_derive = "1.0.196"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
